hphp/test/zend/good/zend/errmsg_036.php.exp
HipHop Fatal error: Undefined interface: parent in hphp/test/zend/good/zend/errmsg_036.php on line 3
