hphp/test/zend/good/zend/errmsg_036.php
<?php

class test implements parent {
}

echo "Done\n";
?>